# oop

./: CMakeLists.txt  doxygen.conf  main.c  makeproject.sh
include/: Any.c  Any.h  Array.c  Array.h  Circle.c  Circle.h  Exception.c  Exception.h  ExceptionObject.c  ExceptionObject.h  GenericType.c  GenericType.h  IO.c  IO.h  Init.h  Interface.c  Interface.h  List.c  List.h  Macro.h  Object.c  Object.h  Point2D.c  Point2D.h  Print.c  Print.h  ReferenceCounter.c  ReferenceCounter.h  Selectors.c  Selectors.h  String.c  String.h  TypeClass.c  TypeClass.h  Utils.c  Utils.h  asprintf.h  new.c  new.h
include/Geometry/: Circle.c  Circle.h  Point2D.c  Point2D.h
include/Interfaces/: CollectionInterface.c  CollectionInterface.h  IOInterface.c  IOInterface.h  OperatorsInterface.c  OperatorsInterface.h  ScalarOperatorsInterface.c  ScalarOperatorsInterface.h  SortInterface.c  SortInterface.h
include/Leakcheck/: stb_leakcheck.c  stb_leakcheck.h
include/Types/: BigInt.c  BigInt.h  Bitset.c  Bitset.h  FloatType.c  FloatType.h  IntType.c  IntType.h  Matrix.c  Matrix.h
include/Types/Floats/: FloatTypes.c  FloatTypes.h
include/Types/Floats/Template/: FloatTemplate.c  FloatTemplate.h  FloatTemplate_default.h
include/Types/Ints/: IntTypes.c  IntTypes.h
include/Types/Ints/Template/: IntTemplate.c  IntTemplate.h  IntTemplate_default.h
logs/: ref_log.txt  sel_log.txt
